--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout
+    android:id="@+id/coordinator"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +15,7 @@
         tools:background="@color/white">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             app:contentScrim="@color/white"
@@ -51,12 +53,13 @@
                     android:id="@+id/progressBar"
                     style="?android:progressBarStyleHorizontal"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="8dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="50dp"
                     android:max="100"
                     android:progress="50"
+                    android:progressDrawable="@drawable/drawable_progress"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/starCountTextView"
                     app:layout_constraintStart_toStartOf="parent"
@@ -148,5 +151,18 @@
                 layout="@layout/layout_horizontal_menu_list" />
         </LinearLayout>
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:text="@string/home_delivery"
+        android:layout_margin="20dp"
+        app:icon="@drawable/delivery"
+        app:iconTint="@color/white"
+        android:textColor="@color/white"
+        android:backgroundTint="#2E6830"
+        android:contentDescription="플로팅 버튼" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
