--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_order.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_order.xml
@@ -21,6 +21,21 @@
             android:minHeight="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:layoutDescription="@xml/fragment_order_toolbar_scene">
+
+            <ImageView
+                android:id="@+id/searchImageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/baseline_search_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <View
+                android:id="@+id/toolbarDummyView"
+                android:layout_width="0dp"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
                 <TextView
                     android:id="@+id/toolbarTitleView"
                     android:text="@string/order"
