--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,6 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp">
-
                 <ImageView
                     android:id="@+id/appBarImageView"
                     android:layout_width="0dp"
@@ -35,7 +34,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
                 <TextView
                     android:id="@+id/appBarTextView"
                     android:layout_width="wrap_content"
@@ -48,7 +46,6 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="?android:progressBarStyleHorizontal"
@@ -64,7 +61,6 @@
                     app:layout_constraintEnd_toStartOf="@+id/starCountTextView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/appBarImageView" />
-
                 <TextView
                     android:id="@+id/starCountTextView"
                     android:layout_width="wrap_content"
@@ -78,7 +74,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                     app:layout_constraintEnd_toStartOf="@+id/starImageView"
                     app:layout_constraintTop_toBottomOf="@+id/appBarImageView" />
-
                 <ImageView
                     android:id="@+id/starImageView"
                     android:layout_width="30dp"
@@ -88,7 +83,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/starCountTextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/starCountTextView" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.Toolbar
@@ -97,13 +91,11 @@
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
                 tools:background="@color/white">
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/newsTextView"
                         android:layout_width="wrap_content"
@@ -113,7 +105,6 @@
                         android:text="what news"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
-
                     <TextView
                         android:id="@+id/couponTextView"
                         android:layout_width="wrap_content"
@@ -126,6 +117,7 @@
                         android:textSize="20sp" />
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -134,6 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="true"
+        android:background="#F1F1F1"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
