--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_order.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_order.xml
@@ -54,6 +54,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#F1F1F1"
         android:nestedScrollingEnabled="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
