--- a/Fastcampus/OrderPage/app/src/main/res/layout/layout_horizontal_menu_list.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/layout_horizontal_menu_list.xml
@@ -22,6 +22,7 @@
     <HorizontalScrollView
         android:id="@+id/menuListHorizontalScrollView"
         android:layout_width="0dp"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
