--- a/Fastcampus/VideoPlayer/app/src/main/res/layout/activity_main.xml
+++ b/Fastcampus/VideoPlayer/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.motion.widget.MotionLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/player_scene"
     tools:context=".MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -24,11 +25,11 @@
             android:layout_height="wrap_content"
             android:background="@color/kakao">
 
-            <Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -37,7 +38,7 @@
                     android:src="@drawable/youtube" />
 
                 <TextView
-                    android:id="@+id/appBarTextView"
+                    android:id="@+id/appBarTitleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -45,7 +46,7 @@
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold" />
-            </Toolbar>
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
         <!---->
 
@@ -58,11 +59,12 @@
         <!---->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <!-- 재생 배경 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/videoPlayerContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="white"
+        android:background="@color/white"
         app:layout_constraintDimensionRatio="H,16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,39 +82,44 @@
 
     <TextView
         android:id="@+id/videoTitleTextView"
-        app:layout_constraintEnd_toStartOf="@id/controlButton"
-        app:layout_constraintStart_toEndOf="@id/playerView"
         android:layout_width="0dp"
-        android:textSize="14sp"
-        android:maxLines="1"
-        android:textColor="@color/black"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
-        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
+        android:maxLines="1"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        tools:text="안녕하세요~~~~~~~"
         app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
-        android:layout_height="wrap_content" />
+        app:layout_constraintEnd_toStartOf="@id/controlButton"
+        app:layout_constraintStart_toEndOf="@id/playerView"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
     <ImageView
         android:id="@+id/controlButton"
-        android:padding="10dp"
-        android:alpha="0"
-        tools:alpha="1"
-        app:layout_constraintEnd_toStartOf="@id/hideButton"
-        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
-        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/hideButton"
-        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
-        tools:alpha="1"
-        app:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+        android:contentDescription="TODO"
+        android:padding="10dp"
+        android:src="@drawable/baseline_play_arrow_24"
         app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
-        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"/>
+        app:layout_constraintEnd_toStartOf="@id/hideButton"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
+        tools:alpha="1" />
+
+    <ImageView
+        android:id="@+id/hideButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:contentDescription="TODO"
+        android:padding="10dp"
+        android:src="@drawable/baseline_pause_24"
+        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+        app:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
+        tools:alpha="1" />
 
     <FrameLayout
         android:id="@+id/recyclerViewContainer"
@@ -122,7 +129,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+        app:layout_constraintTop_toBottomOf="@id/videoPlayerContainer" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerRecyclerView"
@@ -130,7 +137,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@id/recyclerViewContainer"
         app:layout_constraintEnd_toEndOf="@id/recyclerViewContainer"
-        app:layout_constraintStart_toStartOf="recyclerViewContainer"
+        app:layout_constraintStart_toStartOf="@id/recyclerViewContainer"
         app:layout_constraintTop_toTopOf="@id/recyclerViewContainer" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -142,4 +149,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
